[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-tungstenite = { version = "0.22.0", features = ["tokio-runtime", "tokio-rustls-native-certs"] }
cynic = { version = "3.2.2", features = ["http-reqwest", "serde_json"] }
futures = "0.3.28"
graphql-ws-client = { version = "0.5.0", features = ["client-graphql-client"] }
graphql_client = "0.13.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
